2012-02-14  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_exec: Merged from trunk. Quote command line arguments.

2012-02-13  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Merged from trunk. Changed the
	plugin_exec to 'gtimeout'.

2012-02-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_xml_stress.pl: Fixed a problem with new version of perl
	with threads::all, also fixed a concatenation error in a string.

2012-02-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/DB.pm: fixed the function "get_agent_module_id".
	
	Merged bugfix from trunk.

2012-02-01  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PluginServer.pm: Merged from trunk. Use timeout
	  instead of pandora_exec by default.

2012-01-23  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Merged from trunk. Fixed mismatch
	arguments call of pandora_create_template_module.

	* lib/PandoraFMS/Core.pm: Merged from trunk. Fixed misleading
	comment of pandora_create_template_module function signature.

2012-01-17  Kikuchi Koichiro <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Merged from trunk. Fixed a wrong
	  dependency. RHEL has a net-snmp-perl, not a perl-SNMP.
	  Also update version string (to 4.0.1).

2012-01-12  Hirofumi Kosaka <kosaka@rworks.jp>

        * util/pandora_manage.pl: Merged from trunk. Added a new option
	  to CLI: Create alert template

2012-01-10  Hirofumi Kosaka <kosaka@rworks.jp>

        *  util/pandora_manage.pl: Added new optional parameters (str_warning and
	   str_critical) for module at creation time.

2012-01-05  Hirofumi Kosaka <kosaka@rworks.jp>

        * lib/PandoraFMS/Core.pm, util/pandora_manage.pl: Merged from trunk.
          Added a new optoins to CLI: Create group

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl, util/pandora_manage.pl: Updated version strings.

2011-12-13  Ramon Novoa  <rnovoa@artica.es>
